# Frida

./: README.md  pyproject.toml  setup.cfg  setup.py
frida/: base.py  pipelines.py  transforms.py
frida.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frida/transforms/: __init__.py  augmentations.py  base.py  cast.py  transforms.py
src/frida/: base.py  pipelines.py  readers.py  transforms.py
