[metadata]
name = frida-stefanotr
version = 0.0.1
author = Stefano Trebeschi
author_email = s.trebeschi@nki.nl
description = Personal collection of medical imaging functions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src